--- a/dev/scss/base/normalize.scss
+++ b/dev/scss/base/normalize.scss
@@ -8,19 +8,9 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
-*,
-*::before,
-*::after{
-  box-sizing: border-box;
-}
-
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
-}
-
-img{
-  max-width: 100%;
 }
 
 /* Sections
@@ -184,7 +174,8 @@ textarea {
  */
 
 button,
-input { /* 1 */
+input {
+  /* 1 */
   overflow: visible;
 }
 
@@ -194,7 +185,8 @@ input { /* 1 */
  */
 
 button,
-select { /* 1 */
+select {
+  /* 1 */
   text-transform: none;
 }
 
