--- a/dev/views/pages/view.pug
+++ b/dev/views/pages/view.pug
@@ -1,28 +1,17 @@
-include ../config/tabs
-include ../config/about
-include ../config/stats
+extends ../templates/template.pug
 
-include ../mixins/list
+block top
 
-<!DOCTYPE html>
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Document
-  body
     #top-icons.top-icons
       #icon-arrow.top-icons__arrow
       #icon-heart.top-icons__heart
+
+block main
+
     main
-      .poke__view#pokeview
-        .poke__number#pokenumber #001
-        .poke__info
-          .poke__info-name#pokename Bulbasaur
-          .poke__info-type#poketype1 Grass
-          .poke__info-type#poketype2 Poison
-        .poke__img#pokeimg
-          img(src="", alt="pokemon").poke__img
+      .pokeview#pokeview
+        include ../includes/pokemon.pug
+
       
       poke__stats#pokestats
         #tap-bar.tap-bar
