--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -9,3 +9,10 @@
 //Estilos base
 @import "base/normalize";
 @import "base/base";
+
+//Blocks
+@import "blocks/topbar";
+@import "blocks/title";
+@import "blocks/main";
+@import "blocks/pokebox";
+@import "blocks/scroll";
