--- a/dev/views/pages/index.pug
+++ b/dev/views/pages/index.pug
@@ -3,24 +3,141 @@ extends ../templates/template.pug
 block top
 
     #topbar.topbar
-      input(type="text" name="search" placeholder="Search Pokemon" id="search")
-      #sliders
-        button(type="button").button__slider sliders
+      input(type="text" name="search" placeholder="Search Pokemon" id="search").topbar__input
+      button(type="button")#sliders.topbar__button 
+      img(src="assets/img/pokeball.png", alt="pokeball").topbar__img
 
-    .top-title
+    .title
       h1 Pokedex
 
 block main
 
-    main#main
-      .pokemain#pokemain
-        include ../includes/pokemon.pug
-        include ../includes/pokemon.pug
-        include ../includes/pokemon.pug
-        include ../includes/pokemon.pug
-        include ../includes/pokemon.pug
-        include ../includes/pokemon.pug
-        include ../includes/pokemon.pug
-        include ../includes/pokemon.pug
+    main#main.main
+
+    a(href="#")#gotop.gotop
+      img(src="assets/icons/arrow.svg")
+      //- .pokebox#pokebox
+      //-   .pokebox__name Pokemon
+      //-   .pokebox__info
+      //-     .pokebox__number#pokenumber #001
+      //-     img(src="assets/img/pokemon1.png" alt="pokemon").pokebox__img
+      //-     img(src="assets/img/pokeball.png").pokebox__icon
+            
+      //- .pokebox#pokebox
+      //-   .pokebox__name Pokemon
+      //-   .pokebox__info
+      //-     .pokebox__number#pokenumber #001
+      //-     img(src="assets/img/pokemon4.png" alt="pokemon").pokebox__img
+      //-     img(src="assets/img/pokeball.png").pokebox__icon
+          
+            
+      //- .pokebox#pokebox
+      //-   .pokebox__name Pokemon
+      //-   .pokebox__info
+      //-     .pokebox__number#pokenumber #001
+      //-     img(src="assets/img/pokemon7.png" alt="pokemon").pokebox__img
+      //-     img(src="assets/img/pokeball.png").pokebox__icon
+            
+      //- .pokebox#pokebox
+      //-   .pokebox__name Pokemon
+      //-   .pokebox__info
+      //-     .pokebox__number#pokenumber #001
+      //-     img(src="assets/img/pokemon10.png" alt="pokemon").pokebox__img
+      //-     img(src="assets/img/pokeball.png").pokebox__icon
+            
+      //- .pokebox#pokebox
+      //-   .pokebox__name Pokemon
+      //-   .pokebox__info
+      //-     .pokebox__number#pokenumber #001
+      //-     img(src="assets/img/pokemon25.png" alt="pokemon").pokebox__img
+      //-     img(src="assets/img/pokeball.png").pokebox__icon
+            
+      //- .pokebox#pokebox
+      //-   .pokebox__name Pokemon
+      //-   .pokebox__info
+      //-     .pokebox__number#pokenumber #001
+      //-     img(src="assets/img/pokemon30.png" alt="pokemon").pokebox__img
+      //-     img(src="assets/img/pokeball.png").pokebox__icon
+            
+      //- .pokebox#pokebox
+      //-   .pokebox__name Pokemon
+      //-   .pokebox__info
+      //-     .pokebox__number#pokenumber #001
+      //-     img(src="assets/img/pokemon35.png" alt="pokemon").pokebox__img
+      //-     img(src="assets/img/pokeball.png").pokebox__icon
+            
+      //- .pokebox#pokebox
+      //-   .pokebox__name Pokemon
+      //-   .pokebox__info
+      //-     .pokebox__number#pokenumber #001
+      //-     img(src="assets/img/pokemon45.png" alt="pokemon").pokebox__img
+      
+      //- .pokebox#pokebox
+      //-   .pokebox__name Pokemon
+      //-   .pokebox__info
+      //-     .pokebox__number#pokenumber #001
+      //-     img(src="assets/img/pokemon50.png" alt="pokemon").pokebox__img
+      
+      //- .pokebox#pokebox
+      //-   .pokebox__name Pokemon
+      //-   .pokebox__info
+      //-     .pokebox__number#pokenumber #001
+      //-     img(src="assets/img/pokemon1.png" alt="pokemon").pokebox__img
+          
+      //- .pokebox#pokebox
+      //-   .pokebox__name Pokemon
+      //-   .pokebox__info
+      //-     .pokebox__number#pokenumber #001
+      //-     img(src="assets/img/pokemon50.png" alt="pokemon").pokebox__img
+
+      //- .pokebox#pokebox
+      //-   .pokebox__name Pokemon
+      //-   .pokebox__info
+      //-     .pokebox__number#pokenumber #001
+      //-     img(src="assets/img/pokemon1.png" alt="pokemon").pokebox__img
+
+      //- .pokebox#pokebox
+      //-   .pokebox__name Pokemon
+      //-   .pokebox__info
+      //-     .pokebox__number#pokenumber #001
+      //-     img(src="assets/img/pokemon50.png" alt="pokemon").pokebox__img
+      
+      //- .pokebox#pokebox
+      //-   .pokebox__name Pokemon
+      //-   .pokebox__info
+      //-     .pokebox__number#pokenumber #001
+      //-     img(src="assets/img/pokemon1.png" alt="pokemon").pokebox__img
+
+      //- .pokebox#pokebox
+      //-   .pokebox__name Pokemon
+      //-   .pokebox__info
+      //-     .pokebox__number#pokenumber #001
+      //-     img(src="assets/img/pokemon50.png" alt="pokemon").pokebox__img
+      
+      //- .pokebox#pokebox
+      //-   .pokebox__name Pokemon
+      //-   .pokebox__info
+      //-     .pokebox__number#pokenumber #001
+      //-     img(src="assets/img/pokemon1.png" alt="pokemon").pokebox__img
+
+      //- .pokebox#pokebox
+      //-   .pokebox__name Pokemon
+      //-   .pokebox__info
+      //-     .pokebox__number#pokenumber #001
+      //-     img(src="assets/img/pokemon50.png" alt="pokemon").pokebox__img
+      
+      //- .pokebox#pokebox
+      //-   .pokebox__name Pokemon
+      //-   .pokebox__info
+      //-     .pokebox__number#pokenumber #001
+      //-     img(src="assets/img/pokemon1.png" alt="pokemon").pokebox__img
+
+      //- .pokebox#pokebox
+      //-   .pokebox__name Pokemon
+      //-   .pokebox__info
+      //-     .pokebox__number#pokenumber #001
+      //-     img(src="assets/img/pokemon50.png" alt="pokemon").pokebox__img
+      
+      
 
         
