--- a/dev/scss/base/base.scss
+++ b/dev/scss/base/base.scss
@@ -1,6 +1,11 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: $white-color;
   color: $black-color;
+  font-weight: $font-regular;
   min-height: 100vh;
   font-family: $main-font, sans-serif;
 }
