--- a/dev/scss/config/colors.scss
+++ b/dev/scss/config/colors.scss
@@ -1,6 +1,8 @@
 :root {
   --white-color: #f0f2f6;
   --grey-color: #aab3c7;
+  --soft-color: #dde2f0;
+  --dark-color: #a2a2a2;
   --red-color: #f42a28;
   --green-color: #14a06f;
   --blue-color: #37a5c6;
@@ -9,6 +11,8 @@
 
 $white-color: var(--white-color);
 $grey-color: var(--grey-color);
+$soft-color: var(--soft-color);
+$dark-color: var(--dark-color);
 $red-color: var(--red-color);
 $green-color: var(--green-color);
 $blue-color: var(--blue-color);
