search & lazy-loading

--- a/dev/views/pages/index.pug
+++ b/dev/views/pages/index.pug
@@ -14,8 +14,7 @@ block main
 
     main#main.main
 
-    a(href="#")#gotop.gotop
-      img(src="assets/icons/arrow.svg")
+      
       //- .pokebox#pokebox
       //-   .pokebox__name Pokemon
       //-   .pokebox__info
@@ -112,32 +111,34 @@ block main
       //-   .pokebox__name Pokemon
       //-   .pokebox__info
       //-     .pokebox__number#pokenumber #001
-      //-     img(src="assets/img/pokemon50.png" alt="pokemon").pokebox__img
+      //-     img(src="assets/img/pokemon100.png" alt="pokemon" loading="lazy").pokebox__img
       
       //- .pokebox#pokebox
       //-   .pokebox__name Pokemon
       //-   .pokebox__info
       //-     .pokebox__number#pokenumber #001
-      //-     img(src="assets/img/pokemon1.png" alt="pokemon").pokebox__img
+      //-     img(src="assets/img/pokemon101.png" alt="pokemon" loading="lazy").pokebox__img
 
       //- .pokebox#pokebox
       //-   .pokebox__name Pokemon
       //-   .pokebox__info
       //-     .pokebox__number#pokenumber #001
-      //-     img(src="assets/img/pokemon50.png" alt="pokemon").pokebox__img
+      //-     img(src="assets/img/pokemon102.png" alt="pokemon" loading="lazy").pokebox__img
       
       //- .pokebox#pokebox
       //-   .pokebox__name Pokemon
       //-   .pokebox__info
       //-     .pokebox__number#pokenumber #001
-      //-     img(src="assets/img/pokemon1.png" alt="pokemon").pokebox__img
+      //-     img(loading="lazy" src="assets/img/pokemon110.png" alt="pokemon" ).pokebox__img
 
       //- .pokebox#pokebox
       //-   .pokebox__name Pokemon
       //-   .pokebox__info
       //-     .pokebox__number#pokenumber #001
-      //-     img(src="assets/img/pokemon50.png" alt="pokemon").pokebox__img
+      //-     img(loading="lazy" src="assets/img/pokemon120.png" alt="pokemon").pokebox__img
       
-      
+    a(href="#")#gotop.gotop
+      img(src="assets/icons/arrow.svg")
 
+    #modal.modal
         
