--- a/dev/scss/blocks/title.scss
+++ b/dev/scss/blocks/title.scss
@@ -1,16 +1,31 @@
 .title {
   position: sticky;
-  top: 10vh;
-  z-index: 99;
+  top: 8vh;
+  z-index: 100;
   width: 100%;
+  height: 10vh;
+  font-family: $pokemon-font, sans-serif;
   background-color: $white-color;
-  border-bottom: 1px solid $black-color;
+  border-bottom: 3px solid $black-color;
+  overflow: hidden;
+  display: flex;
+  align-items: stretch;
+
   & h1 {
-    font-size: 2.5rem;
-    font-weight: $font-bold;
-    padding-bottom: 0.3rem;
+    font-size: 2.2rem;
     margin-top: 0;
     margin-bottom: 0;
-    margin-left: 10px;
+    margin-left: 15px;
+    color: $yellow-color;
+    letter-spacing: 0.2rem;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+      1px 1px 0 $black-color;
+  }
+
+  @supports (-webkit-text-stroke: 1px black) {
+    h1 {
+      -webkit-text-stroke: 1px black;
+      -webkit-text-fill-color: $yellow-color;
+    }
   }
 }
