--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,400&display=swap");
-:root { --white-color: #f0f2f6; --grey-color: #aab3c7; --soft-color: #dde2f0; --dark-color: #a2a2a2; --red-color: #f42a28; --green-color: #14a06f; --blue-color: #37a5c6; --black-color: #000000; }
+:root { --pure-color: #ffffff; --white-color: #f0f2f6; --grey-color: #aab3c7; --soft-color: #dde2f0; --dark-color: #a2a2a2; --pokedex-color: #db0d31; --red-color: #f42a28; --green-color: #14a06f; --blue-color: #37a5c6; --black-color: #000000; --yellow-color: #ffd86f; }
+
+@font-face { src: url("../assets/fonts/Pokemon Solid.ttf"); font-family: "Pokemon"; }
+
+input[type="radio"] { position: absolute; visibility: hidden; display: none; }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document ========================================================================== */
@@ -112,29 +116,27 @@ template { display: none; }
 
 html { scroll-behavior: smooth; }
 
-body { background-color: var(--white-color); color: var(--black-color); font-weight: 400; min-height: 100vh; font-family: "Roboto", sans-serif; }
+body { background-color: var(--white-color); color: #000000; font-weight: 400; min-height: 100vh; font-family: "Roboto", sans-serif; }
 
-.topbar { height: 10vh; width: 100%; display: flex; justify-content: space-between; align-items: center; position: -webkit-sticky; position: sticky; top: 0; z-index: 100; background-color: var(--white-color); }
+.topbar { height: 8vh; width: 100%; display: flex; align-items: flex-end; position: -webkit-sticky; position: sticky; top: 0; background-color: var(--white-color); z-index: 100; }
 
-.topbar__input { outline: none; width: 50%; padding: 0.5rem; margin-left: 12px; }
+.topbar__input { outline: none; width: 45%; padding: 0.5rem; margin-left: 10px; border-radius: 20px; }
 
-.topbar__button { height: 30px; width: 30px; margin-right: 10px; background: url("../assets/icons/sliders.svg"); background-color: transparent; border: none; z-index: 101; }
+.title { position: -webkit-sticky; position: sticky; top: 8vh; z-index: 100; width: 100%; height: 10vh; font-family: "Pokemon", sans-serif; background-color: var(--white-color); border-bottom: 3px solid #000000; overflow: hidden; display: flex; align-items: stretch; }
 
-.topbar__img { position: fixed; height: 300px; right: -124px; filter: invert(87%) sepia(8%) saturate(265%) hue-rotate(186deg) brightness(100%) contrast(100%); }
+.title h1 { font-size: 2.2rem; margin-top: 0; margin-bottom: 0; margin-left: 15px; color: #ffd86f; letter-spacing: 0.2rem; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000000; }
 
-.title { position: -webkit-sticky; position: sticky; top: 10vh; z-index: 99; width: 100%; background-color: var(--white-color); border-bottom: 1px solid var(--black-color); }
+@supports (-webkit-text-stroke: 1px black) { .title h1 { -webkit-text-stroke: 1px black; -webkit-text-fill-color: #ffd86f; } }
 
-.title h1 { font-size: 2.5rem; font-weight: 700; padding-bottom: 0.3rem; margin-top: 0; margin-bottom: 0; margin-left: 10px; }
+.main { background-color: var(--pure-color); display: grid; gap: 0.3rem; grid-template-columns: 1fr 1fr; justify-items: center; align-items: center; padding: 0.3rem; border-bottom: 3px solid #000000; }
 
-.main { background-color: var(--white-color); display: grid; grid-template-columns: 1fr 1fr; justify-items: center; align-items: center; padding: 0.5rem 0 0 0; }
+.pokebox { background-color: #a0a6b5; margin: 5px; border-radius: 20px; padding: 0.8rem 0 0 1rem; position: relative; transition: transform 0.35s; transform: none; box-shadow: 2px 2px 5px 0px #000000, 2px 2px 15px 5px rgba(0, 0, 0, 0); }
 
-.pokebox { background-color: var(--grey-color); margin: 5px; border-radius: 20px; padding: 1rem 0 0 1rem; position: relative; transition: transform 0.35s; transform: none; }
-
-.pokebox__name { margin-top: 0.2rem; position: absolute; color: var(--white-color); }
+.pokebox__name { margin-top: 0.2rem; position: absolute; color: #000000; }
 
 .pokebox__info { display: flex; align-items: center; justify-content: space-between; position: relative; overflow: hidden; }
 
-.pokebox__number { background-color: var(--soft-color); font-size: 0.8rem; font-weight: 700; width: 40%; border-radius: 10px; text-align: center; padding: 0.2rem 0; }
+.pokebox__number { background-color: var(--pure-color); font-size: 1rem; font-weight: 700; width: 40%; border-radius: 10px; text-align: center; padding: 0.2rem 0; }
 
 .pokebox__img { width: 50%; transform: scale(0.8); z-index: 10; }
 
@@ -142,8 +144,32 @@ body { background-color: var(--white-color); color: var(--black-color); font-wei
 
 .pokebox.isNotVisible { transform: scale(0.9); }
 
-.gotop { width: 30px; height: 30px; position: fixed; z-index: 100; background-color: var(--blue-color); bottom: 20px; right: 10px; text-align: center; padding: 14px 10px 7px 10px; border-radius: 100%; outline: none; transform: translateX(200%); pointer-events: none; transition: transform 0.35s; }
+.gotop { width: 30px; height: 30px; position: fixed; z-index: 100; background-color: #ffd86f; bottom: 20px; right: 10px; text-align: center; padding: 14px 10px 7px 10px; border-radius: 100%; outline: none; transform: translateX(200%); transition: transform 0.35s; }
 
 .gotop img { width: 60%; pointer-events: none; }
 
-.gotop.scrollOn { transform: translateX(0%); pointer-events: all; }
+.gotop.scrollOn { transform: translateX(0%); }
+
+.modal { background-color: #ffd86f; position: fixed; box-sizing: border-box; top: 0; left: 0; width: 100%; height: 18vh; z-index: 150; padding: 1rem 0 0 1rem; transform: translateY(-110%); transition: transform 0.35s; }
+
+.modal.isActive { transform: translateY(0); }
+
+.slider__button { position: fixed; height: 30px; width: 30px; top: 19px; right: 15px; background: url("../assets/icons/sliders.svg"); background-color: transparent; border: none; z-index: 201; }
+
+.slider__button.isActive { background: url("../assets/icons/close.svg") no-repeat; background-size: 90%; background-position: center center; }
+
+.slider__button:focus { outline: none; }
+
+.slider__img { position: fixed; height: 280px; top: -106px; right: -110px; filter: invert(87%) sepia(34%) saturate(746%) hue-rotate(334deg) brightness(102%) contrast(101%) drop-shadow(1px 1px 1px black); z-index: 200; }
+
+.slider__img.isActive { opacity: 0; height: 0; }
+
+.radio { width: 100%; }
+
+.radio__title { margin: 0 0 0.8rem 0; font-size: 1.5rem; color: #000000; }
+
+.radio__options { border: solid 3px #fff4d5; display: inline-block; border-radius: 10px; overflow: hidden; }
+
+.radio__input:checked + label { background: #fff4d5; }
+
+.radio__label { font-size: 1rem; font-weight: 700; color: #000000; display: inline-block; cursor: pointer; font-weight: 700; padding: 8px 10px; }
