--- a/dev/scss/blocks/topbar.scss
+++ b/dev/scss/blocks/topbar.scss
@@ -14,5 +14,8 @@
     padding: 0.5rem;
     margin-left: 10px;
     border-radius: 20px;
+    background: url("../assets/icons/search.svg") no-repeat;
+    background-color: $pure-color;
+    text-indent: 30px;
   }
 }
