--- a/dev/scss/config/colors.scss
+++ b/dev/scss/config/colors.scss
@@ -1,10 +1,7 @@
 :root {
   --pure-color: #ffffff;
   --white-color: #f0f2f6;
-  --grey-color: #aab3c7;
-  --soft-color: #dde2f0;
-  --dark-color: #a2a2a2;
-  --pokedex-color: #db0d31;
+  --grey-color: #c7c8ca;
   --red-color: #f42a28;
   --green-color: #14a06f;
   --blue-color: #37a5c6;
@@ -14,10 +11,7 @@
 
 $pure-color: var(--pure-color);
 $white-color: var(--white-color);
-$grey-color: #a0a6b5;
-$soft-color: var(--soft-color);
-$dark-color: var(--dark-color);
-$pokedex-color: var(--pokedex-color);
+$grey-color: #c7c8ca;
 $red-color: var(--red-color);
 $green-color: var(--green-color);
 $blue-color: var(--blue-color);
