--- a/dev/views/templates/template.pug
+++ b/dev/views/templates/template.pug
@@ -1,8 +1,10 @@
 include ../config/tabs
 include ../config/about
 include ../config/stats
+include ../config/radio
 
 include ../mixins/list
+include ../mixins/radio
 
 <!DOCTYPE html>
 html(lang="en")
