--- a/dev/scss/blocks/modal.scss
+++ b/dev/scss/blocks/modal.scss
@@ -1,15 +1,16 @@
 .modal {
   background-color: $yellow-color;
   position: fixed;
-  box-sizing: border-box;
+  // box-sizing: border-box;
   top: 0;
   left: 0;
   width: 100%;
   height: 18vh;
   z-index: 150;
-  padding: 1rem 0 0 1rem;
-  transform: translateY(-110%);
+  transform: translateY(-100%);
   transition: transform 0.35s;
+  display: flex;
+  align-items: center;
 
   &.isActive {
     transform: translateY(0);
