--- a/dev/scss/blocks/pokebox.scss
+++ b/dev/scss/blocks/pokebox.scss
@@ -1,48 +1,45 @@
 .pokebox {
-  background-color: $grey-color;
+  background-color: $white-color;
   margin: 5px;
-  border-radius: 20px;
-  padding: 0.8rem 0 0 1rem;
   position: relative;
+  padding-top: 1rem;
   transition: transform 0.35s;
   transform: none;
-  box-shadow: 2px 2px 5px 0px $black-color, 2px 2px 15px 5px rgba(0, 0, 0, 0);
+  box-shadow: 2px 2px 5px 0px $black-color, 2px 2px 15px 5px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  max-width: 165px;
 
-  &__name {
-    margin-top: 0.2rem;
-    position: absolute;
-    color: $black-color;
-  }
-  &__info {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
-    overflow: hidden;
-  }
-  &__number {
-    background-color: $pure-color;
-    font-size: 1rem;
-    font-weight: $font-bold;
-    width: 40%;
-    border-radius: 10px;
-    text-align: center;
-    padding: 0.2rem 0;
-  }
   &__img {
-    width: 50%;
-    transform: scale(0.8);
+    width: 100%;
     z-index: 10;
+    position: relative;
   }
+
   &__icon {
     position: absolute;
-    width: 70%;
     height: 100%;
-    right: -20px;
-    bottom: -10px;
-    filter: invert(92%) sepia(20%) saturate(408%) hue-rotate(185deg)
-      brightness(99%) contrast(89%);
+    right: -113px;
+    top: -72px;
   }
+
+  &__number {
+    position: absolute;
+    top: 0;
+    font-size: 1rem;
+    font-weight: $font-bold;
+    width: 30%;
+    text-align: center;
+    padding: 8px 10px 8px 0;
+  }
+
+  &__name {
+    color: $black-color;
+    background-color: $grey-color;
+    padding: 1rem 0;
+    font-size: 1.5rem;
+    text-align: center;
+  }
+
   &.isNotVisible {
     transform: scale(0.9);
   }
