Link View & local Storage

--- a/dev/views/pages/index.pug
+++ b/dev/views/pages/index.pug
@@ -30,6 +30,5 @@ block main
           input(type="radio" id="favorites" name="sort" value="favorites").radio__input
           +labels(radio)
 
-
-      
-        
+block script
+  script(src="js/scripts-min.js")
