--- a/dev/views/templates/template.pug
+++ b/dev/views/templates/template.pug
@@ -4,7 +4,7 @@ include ../config/stats
 include ../config/radio
 
 include ../mixins/list
-include ../mixins/radio
+include ../mixins/labels
 
 <!DOCTYPE html>
 html(lang="en")
@@ -16,4 +16,4 @@ html(lang="en")
   body
     block top
     block main
-    script(src="js/scripts-min.js")
+    block script
