--- a/dev/scss/blocks/radio.scss
+++ b/dev/scss/blocks/radio.scss
@@ -15,6 +15,10 @@
     margin-left: 10vw;
   }
 
+  &__input[type="radio"] {
+    @include reset-radio;
+  }
+
   &__input:checked + input + input + label,
   &__input:checked + input + label + label,
   &__input:checked + label + label + label {
