--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,120 +3,120 @@
 
 @font-face { src: url("../assets/fonts/Pokemon Solid.ttf"); font-family: "Pokemon"; }
 
-input[type="radio"] { position: absolute; visibility: hidden; display: none; }
-
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-/* Document ========================================================================== */
-/** 1. Correct the line height in all browsers. 2. Prevent adjustments of font size after orientation changes in iOS. */
-html { line-height: 1.15; /* 1 */ -webkit-text-size-adjust: 100%; /* 2 */ }
 
-/* Sections ========================================================================== */
-/** Remove the margin in all browsers. */
+
+html { line-height: 1.15;  -webkit-text-size-adjust: 100%;  }
+
+
+
 body { margin: 0; }
 
-/** Render the `main` element consistently in IE. */
+
 main { display: block; }
 
-/** Correct the font size and margin on `h1` elements within `section` and `article` contexts in Chrome, Firefox, and Safari. */
+
 h1 { font-size: 2em; margin: 0.67em 0; }
 
-/* Grouping content ========================================================================== */
-/** 1. Add the correct box sizing in Firefox. 2. Show the overflow in Edge and IE. */
-hr { box-sizing: content-box; /* 1 */ height: 0; /* 1 */ overflow: visible; /* 2 */ }
 
-/** 1. Correct the inheritance and scaling of font size in all browsers. 2. Correct the odd `em` font sizing in all browsers. */
-pre { font-family: monospace, monospace; /* 1 */ font-size: 1em; /* 2 */ }
 
-/* Text-level semantics ========================================================================== */
-/** Remove the gray background on active links in IE 10. */
+hr { box-sizing: content-box;  height: 0;  overflow: visible;  }
+
+
+pre { font-family: monospace, monospace;  font-size: 1em;  }
+
+
+
 a { background-color: transparent; }
 
-/** 1. Remove the bottom border in Chrome 57- 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari. */
-abbr[title] { border-bottom: none; /* 1 */ text-decoration: underline; /* 2 */ -webkit-text-decoration: underline dotted; text-decoration: underline dotted; /* 2 */ }
 
-/** Add the correct font weight in Chrome, Edge, and Safari. */
+abbr[title] { border-bottom: none;  text-decoration: underline;  -webkit-text-decoration: underline dotted; text-decoration: underline dotted;  }
+
+
 b, strong { font-weight: bolder; }
 
-/** 1. Correct the inheritance and scaling of font size in all browsers. 2. Correct the odd `em` font sizing in all browsers. */
-code, kbd, samp { font-family: monospace, monospace; /* 1 */ font-size: 1em; /* 2 */ }
 
-/** Add the correct font size in all browsers. */
+code, kbd, samp { font-family: monospace, monospace;  font-size: 1em;  }
+
+
 small { font-size: 80%; }
 
-/** Prevent `sub` and `sup` elements from affecting the line height in all browsers. */
+
 sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
 
 sub { bottom: -0.25em; }
 
 sup { top: -0.5em; }
 
-/* Embedded content ========================================================================== */
-/** Remove the border on images inside links in IE 10. */
+
+
 img { border-style: none; }
 
-/* Forms ========================================================================== */
-/** 1. Change the font styles in all browsers. 2. Remove the margin in Firefox and Safari. */
-button, input, optgroup, select, textarea { font-family: inherit; /* 1 */ font-size: 100%; /* 1 */ line-height: 1.15; /* 1 */ margin: 0; /* 2 */ }
 
-/** Show the overflow in IE. 1. Show the overflow in Edge. */
-button, input { /* 1 */ overflow: visible; }
 
-/** Remove the inheritance of text transform in Edge, Firefox, and IE. 1. Remove the inheritance of text transform in Firefox. */
-button, select { /* 1 */ text-transform: none; }
+button, input, optgroup, select, textarea { font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;  }
 
-/** Correct the inability to style clickable types in iOS and Safari. */
+
+button, input {  overflow: visible; }
+
+
+button, select {  text-transform: none; }
+
+
 button, [type="button"], [type="reset"], [type="submit"] { -webkit-appearance: button; }
 
-/** Remove the inner border and padding in Firefox. */
+
 button::-moz-focus-inner, [type="button"]::-moz-focus-inner, [type="reset"]::-moz-focus-inner, [type="submit"]::-moz-focus-inner { border-style: none; padding: 0; }
 
-/** Restore the focus styles unset by the previous rule. */
+
 button:-moz-focusring, [type="button"]:-moz-focusring, [type="reset"]:-moz-focusring, [type="submit"]:-moz-focusring { outline: 1px dotted ButtonText; }
 
-/** Correct the padding in Firefox. */
+
 fieldset { padding: 0.35em 0.75em 0.625em; }
 
-/** 1. Correct the text wrapping in Edge and IE. 2. Correct the color inheritance from `fieldset` elements in IE. 3. Remove the padding so developers are not caught out when they zero out `fieldset` elements in all browsers. */
-legend { box-sizing: border-box; /* 1 */ color: inherit; /* 2 */ display: table; /* 1 */ max-width: 100%; /* 1 */ padding: 0; /* 3 */ white-space: normal; /* 1 */ }
 
-/** Add the correct vertical alignment in Chrome, Firefox, and Opera. */
+legend { box-sizing: border-box;  color: inherit;  display: table;  max-width: 100%;  padding: 0;  white-space: normal;  }
+
+
 progress { vertical-align: baseline; }
 
-/** Remove the default vertical scrollbar in IE 10+. */
+
 textarea { overflow: auto; }
 
-/** 1. Add the correct box sizing in IE 10. 2. Remove the padding in IE 10. */
-[type="checkbox"], [type="radio"] { box-sizing: border-box; /* 1 */ padding: 0; /* 2 */ }
 
-/** Correct the cursor style of increment and decrement buttons in Chrome. */
+[type="checkbox"], [type="radio"] { box-sizing: border-box;  padding: 0;  }
+
+
 [type="number"]::-webkit-inner-spin-button, [type="number"]::-webkit-outer-spin-button { height: auto; }
 
-/** 1. Correct the odd appearance in Chrome and Safari. 2. Correct the outline style in Safari. */
-[type="search"] { -webkit-appearance: textfield; /* 1 */ outline-offset: -2px; /* 2 */ }
 
-/** Remove the inner padding in Chrome and Safari on macOS. */
+[type="search"] { -webkit-appearance: textfield;  outline-offset: -2px;  }
+
+
 [type="search"]::-webkit-search-decoration { -webkit-appearance: none; }
 
-/** 1. Correct the inability to style clickable types in iOS and Safari. 2. Change font properties to `inherit` in Safari. */
-::-webkit-file-upload-button { -webkit-appearance: button; /* 1 */ font: inherit; /* 2 */ }
 
-/* Interactive ========================================================================== */
-/* Add the correct display in Edge, IE 10+, and Firefox. */
+::-webkit-file-upload-button { -webkit-appearance: button;  font: inherit;  }
+
+
+
 details { display: block; }
 
-/* Add the correct display in all browsers. */
+
 summary { display: list-item; }
 
-/* Misc ========================================================================== */
-/** Add the correct display in IE 10+. */
+
+
 template { display: none; }
 
-/** Add the correct display in IE 10. */
+
 [hidden] { display: none; }
 
 html { scroll-behavior: smooth; }
 
 body { background-color: var(--white-color); color: #000000; font-weight: 400; min-height: 100vh; font-family: "Roboto", sans-serif; }
+
+body::-webkit-scrollbar { width: 0 !important; }
 
 .topbar { height: 8vh; width: 100%; display: flex; align-items: flex-end; position: -webkit-sticky; position: sticky; top: 0; background-color: var(--white-color); z-index: 100; }
 
@@ -142,7 +142,7 @@ body { background-color: var(--white-color); color: #000000; font-weight: 400; m
 
 .pokebox__icon { position: absolute; height: 100%; right: -113px; top: -72px; }
 
-.pokebox__number { position: absolute; top: 0; font-size: 1rem; font-weight: 700; width: 30%; text-align: center; padding: 8px 10px 8px 0; }
+.pokebox__number { position: absolute; top: 0; font-size: 1rem; font-weight: 700; width: 30%; text-align: center; padding: 8px 10px 8px 0; color: #000000; }
 
 .pokebox__name { color: #000000; background-color: #c7c8ca; padding: 1rem 0; font-size: 1.5rem; text-align: center; }
 
@@ -174,6 +174,16 @@ body { background-color: var(--white-color); color: #000000; font-weight: 400; m
 
 .radio__options { border: solid 3px #fff4d5; display: inline-block; border-radius: 10px; overflow: hidden; margin-left: 10vw; }
 
+.radio__input[type="radio"] { position: absolute; visibility: hidden; display: none; }
+
 .radio__input:checked + input + input + label, .radio__input:checked + input + label + label, .radio__input:checked + label + label + label { background: #fff4d5; }
 
 .radio__label { font-size: 1rem; font-weight: 700; text-transform: capitalize; color: #000000; display: inline-block; cursor: pointer; font-weight: 700; padding: 8px 10px; min-width: 60px; text-align: center; }
+
+.top-icons { background-color: red; height: 10vh; }
+
+.pokeview { background-color: green; height: 40vh; }
+
+.pokestats { background-color: blue; height: 50vh; }
+
+ul { list-style: none; padding-left: 0; margin-top: 0; margin-bottom: 0; }
