--- a/dev/scss/config/colors.scss
+++ b/dev/scss/config/colors.scss
@@ -10,7 +10,7 @@
 }
 
 $pure-color: var(--pure-color);
-$white-color: var(--white-color);
+$white-color: #f0f2f6;
 $grey-color: #c7c8ca;
 $red-color: var(--red-color);
 $green-color: var(--green-color);
