--- a/dev/scss/pages/view.scss
+++ b/dev/scss/pages/view.scss
@@ -1,18 +1,5 @@
-.top-icons {
-  background-color: red;
-  height: 10vh;
-}
-
-.pokeview {
-  background-color: green;
-  height: 40vh;
-}
-
-.pokestats {
-  background-color: blue;
-  height: 50vh;
-}
-
-ul {
-  @include reset-list;
-}
+//Blocks
+@import "top-icons";
+@import "poke-info";
+@import "poke-img";
+@import "tap-bar";
