--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -6,6 +6,7 @@
 @import "mixins/breakpoints";
 @import "mixins/reset-list";
 @import "mixins/reset-radio";
+@import "mixins/buttons";
 
 //Estilos base
 @import "base/normalize";
