--- a/dev/views/templates/template.pug
+++ b/dev/views/templates/template.pug
@@ -5,6 +5,7 @@ include ../config/radio
 
 include ../mixins/list
 include ../mixins/labels
+include ../mixins/tabs
 
 <!DOCTYPE html>
 html(lang="en")
