--- a/dev/views/pages/view.pug
+++ b/dev/views/pages/view.pug
@@ -3,31 +3,30 @@ extends ../templates/template.pug
 block top
 
     #top-icons.top-icons
-      #icon-arrow.top-icons__arrow hello
-      #icon-heart.top-icons__heart there
+      button(alt="arrow" tabindex="0")#icon-arrow.top-icons__arrow 
+      button(alt="heart" tabindex="0")#icon-heart.top-icons__heart
 
 block main
+    #main
+      #pokeinfo.pokeinfo
+        #basicinfo.pokeinfo__type
+          h1#pokename 
+        #numberinfo.pokeinfo__number
+          p#pokenumber 
+      #pokeimg.pokeimg
+        img(src="", alt="Pokemon")#pokedataimg
 
-    #pokeview.pokeview
-      h1#pokename
-      img(src="", alt="Pokemon")#pokeimg
-    #pokestats.pokestats
       #tap-bar.tap-bar
-        +list(tabs)
-      //- #statsbox.stats-box
-        
-      //-   .stats-box__about
-      //-     +list(about)
-      //-     h2 Breeding
-      //-     +list(breeding)
-
-      //-   .stats-box__stats
-      //-     +list(stats)
-      //-       h4 50
-      //-       progress(value="50" max="100")
-
-      //-     h2 Type Defenses
-      //-     p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur ullam deserunt facere iure deleniti nemo distinctio nobis eveniet laboriosam amet.
+        input(type="radio" name="item" checked)#section1.tap-bar__input
+        input(type="radio" name="item")#section2.tap-bar__input
+        input(type="radio" name="item")#section3.tap-bar__input
+        input(type="radio" name="item")#section4.tap-bar__input
+        .tap-bar__labels
+          - for(var i = 1; i < 5; i++)
+              label.tap-bar__label(for='section' + i tabindex="0")= tabs[i-1]
+        each tab in tabs
+          section.tap-bar__section
+            h1= tab
 
 block script
   script(src="js/view.js")
